--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap");
 /* titulo */
 .titulo-container {
   background-color: #fc9903;
@@ -6,18 +7,15 @@
   width: 250px;
   border-radius: 0 15px 15px 0;
   display: flex;
-  font-family: "Roboto", sans-serif;
   margin-bottom: 5px;
 }
 .titulo-container span:first-child {
   width: 20%;
-  font-size: 20px;
-  font-weight: bold;
+  font: bold 20px Roboto;
 }
 .titulo-container span:last-child {
-  padding: 29px 0 0 80px;
-  font-size: 15px;
-  font-weight: bold;
+  padding: 28px 0 0 80px;
+  font: bold 15px Roboto;
 }
 
 /* Tabela Header */
@@ -81,14 +79,14 @@
   padding: 2px;
   font-weight: 400 !important;
   font-size: 10px !important;
-  border: 0.2px solid #9b9898;
+  border: 0.2px solid #b9b9b9;
 }
 .table-info tr:last-child td:nth-child(1) ul:last-child {
   background-color: #fc9903;
   padding: 2px;
   font-weight: 400 !important;
   font-size: 10px !important;
-  border: 0.2px solid #9b9898;
+  border: 0.2px solid #b9b9b9;
 }
 .table-info tr:last-child td:nth-child(1) ul:last-child {
   background-color: #515151;
@@ -102,11 +100,11 @@
   font-weight: 600 !important;
   padding-left: 5px;
   padding-right: 5px;
-  color: #525150;
+  color: #515151;
 }
 .table-info tr:last-child td:nth-child(2) ul:last-child {
-  background-color: #cbcbcb;
-  border: 0.1px solid #9b9898;
+  background-color: #b9b9b9;
+  border: 0.1px solid #b9b9b9;
   padding-top: 2px;
   padding-bottom: 2px;
 }
