--- a/src/sass/files/variaveis.scss
+++ b/src/sass/files/variaveis.scss
@@ -5,6 +5,7 @@ $cinza-dark: grey;
 $cinza-bold: #515151;
 
 $branco: white;
+$preto: black;
 
 $fonte-padrao: bold 20px Roboto;
 $fonte-bold: #c6538c;
