--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,7 +28,7 @@
   color: white;
   font: 10px Roboto;
 }
-.table-header tr:first-child th :last-child {
+.table-header tr:first-child th:last-child {
   border-radius: 0 5px 5px 0;
 }
 .table-header tr:last-child {
@@ -57,7 +57,7 @@
 .table-info tr:first-child th {
   padding: 5px 0 5px 0;
 }
-.table-info tr:first-child th :last-child {
+.table-info tr:first-child th:last-child {
   border-radius: 0 5px 5px 0;
 }
 .table-info tr:last-child td ul {
@@ -115,19 +115,57 @@
   font-weight: bold !important;
 }
 
+#prancha {
+  position: relative;
+}
+
+/* Decor */
+.img-boat {
+  position: absolute;
+  width: 112px;
+  right: 4px;
+  top: -99px;
+}
+
+.img-bordo {
+  transform: scale(0.6);
+  position: absolute;
+  width: 60px;
+  right: -10px;
+  top: -41px;
+}
+
+.img-estibordo {
+  position: absolute;
+  width: 37px;
+  height: 90px;
+  left: -1px;
+  top: 25px;
+}
+
+.decor {
+  font: 500 10px Roboto;
+  position: absolute;
+  text-align: center;
+  border: 1px solid black;
+  right: 4px;
+  top: -12px;
+  width: 109px;
+}
+
 .table-prancha {
   border-spacing: 0;
-  width: 80%;
+  width: 95%;
 }
 
 /* Main */
 .main th {
-  font-size: 9px;
+  font-size: 8px;
   border-bottom: 1px solid black;
 }
 .main th:last-child {
   background-color: #fc9903;
-  font-size: 15px;
+  font-size: 10px;
   border-bottom: 0;
   border-left: 1px solid black;
   border-top: 1px solid black;
@@ -135,8 +173,7 @@
 
 /* Sub */
 .sub {
-  font-size: 10px;
-  font-weight: bold;
+  font: bold 8px Roboto;
   background-color: #fc9903;
   color: white;
   text-align: center;
@@ -156,6 +193,9 @@
 }
 
 /* Dados */
+.dados {
+  font-weight: bold;
+}
 .dados:nth-last-child(1) td:last-child {
   background-color: grey !important;
 }
@@ -164,6 +204,12 @@
 }
 .dados:nth-last-child(1) {
   background-color: grey !important;
+}
+.dados:nth-last-child(1) td {
+  font-size: 13px !important;
+}
+.dados:nth-last-child(1) td .tons {
+  padding-top: 8px !important;
 }
 .dados:nth-last-child(2) {
   background-color: #b9b9b9;
@@ -189,4 +235,12 @@
 }
 .dados td:nth-last-child(1) {
   background-color: #b9b9b9;
+}
+
+.tons {
+  color: black !important;
+  font-size: 6px !important;
+  padding-top: 3px;
+  margin-left: 5px;
+  padding-right: 2px;
 }
