--- a/src/sass/files/variaveis.scss
+++ b/src/sass/files/variaveis.scss
@@ -9,3 +9,17 @@ $preto: black;
 
 $fonte-padrao: bold 20px Roboto;
 $fonte-bold: #c6538c;
+
+
+$cem: 60px;
+$noventa: $cem*0.9;
+$oitenta: $cem*0.8;
+$setenta: $cem*0.7;
+$sessenta: $cem*0.6;
+$cinquenta: $cem*0.5;
+$quarenta: $cem*0.4;
+$trinta: $cem*0.3;
+$vinte: $cem*0.2;
+$dez: $cem*0.1;
+
+  
