--- a/src/css/main.css
+++ b/src/css/main.css
@@ -117,6 +117,7 @@
 
 #prancha {
   position: relative;
+  margin-bottom: 20px;
 }
 
 /* Decor */
@@ -156,91 +157,220 @@
 .table-prancha {
   border-spacing: 0;
   width: 95%;
+  /* Main */
+  /* Sub */
+  /* Dados */
 }
-
-/* Main */
-.main th {
+.table-prancha .main th {
   font-size: 8px;
   border-bottom: 1px solid black;
 }
-.main th:last-child {
+.table-prancha .main th:last-child {
   background-color: #fc9903;
   font-size: 10px;
   border-bottom: 0;
   border-left: 1px solid black;
   border-top: 1px solid black;
 }
-
-/* Sub */
-.sub {
+.table-prancha .sub {
   font: bold 8px Roboto;
   background-color: #fc9903;
   color: white;
   text-align: center;
 }
-.sub td {
+.table-prancha .sub td {
   border-left: 0.1px solid #b16b03;
   border-right: 0.1px solid #b16b03;
   border-bottom: 1px solid #ffcd14;
 }
-.sub td:first-child {
+.table-prancha .sub td:first-child {
   border-left: 1px solid black;
   border-right: 1px solid white;
   border-bottom: 1px solid white;
 }
-.sub td:last-child {
+.table-prancha .sub td:last-child {
   color: black;
 }
-
-/* Dados */
-.dados {
+.table-prancha .dados {
   font-weight: bold;
 }
-.dados:nth-last-child(1) td:last-child {
+.table-prancha .dados:nth-last-child(1) td:last-child {
   background-color: grey !important;
 }
-.dados:nth-last-child(1) td:nth-child(2) {
+.table-prancha .dados:nth-last-child(1) td:nth-child(2) {
   background-color: grey !important;
 }
-.dados:nth-last-child(1) {
+.table-prancha .dados:nth-last-child(1) {
   background-color: grey !important;
 }
-.dados:nth-last-child(1) td {
+.table-prancha .dados:nth-last-child(1) td {
   font-size: 13px !important;
 }
-.dados:nth-last-child(1) td .tons {
+.table-prancha .dados:nth-last-child(1) td .tons {
   padding-top: 8px !important;
 }
-.dados:nth-last-child(2) {
+.table-prancha .dados:nth-last-child(2) {
   background-color: #b9b9b9;
 }
-.dados:nth-last-child(3) {
+.table-prancha .dados:nth-last-child(3) {
   background-color: grey !important;
 }
-.dados:nth-last-child(3) td:nth-child(2) {
+.table-prancha .dados:nth-last-child(3) td:nth-child(2) {
   background-color: grey !important;
 }
-.dados:nth-last-child(3) td:last-child {
+.table-prancha .dados:nth-last-child(3) td:last-child {
   background-color: grey !important;
 }
-.dados td {
+.table-prancha .dados td {
   font-size: 9px;
   text-align: center;
 }
-.dados td:first-child {
+.table-prancha .dados td:first-child {
   background-color: white !important;
 }
-.dados td:nth-child(2) {
+.table-prancha .dados td:nth-child(2) {
   background-color: #b9b9b9;
 }
-.dados td:nth-last-child(1) {
+.table-prancha .dados td:nth-last-child(1) {
   background-color: #b9b9b9;
 }
-
-.tons {
+.table-prancha .tons {
   color: black !important;
   font-size: 6px !important;
   padding-top: 3px;
   margin-left: 5px;
   padding-right: 2px;
+}
+
+.table-rateio {
+  border-spacing: 0;
+  width: 95%;
+  border-collapse: collapse;
+}
+.table-rateio .main th {
+  border-collapse: collapse;
+  border-bottom: 0.5px solid black;
+  border-top: 0.5px solid black;
+  font-size: 6px;
+  background-color: #fc9903;
+}
+.table-rateio .main th:first-child {
+  border-collapse: collapse;
+  border-left: 0.5px solid black;
+}
+.table-rateio .main th:last-child {
+  border-collapse: collapse;
+  border-right: 0.5px solid black;
+}
+.table-rateio .mainEmpresa th {
+  border-collapse: collapse;
+  border-bottom: 0.5px solid black;
+  border-top: 0.5px solid black;
+  font-size: 6px;
+  background-color: #fc9903;
+  border: 0.5px solid black;
+}
+.table-rateio .footer {
+  font-weight: bold;
+}
+.table-rateio .footer td {
+  height: 18px;
+  font-size: 6px;
+  background-color: grey;
+  text-align: center;
+}
+.table-rateio .break {
+  height: 8px;
+}
+.table-rateio .break td {
+  border: 0.5px solid black;
+}
+.table-rateio .rateioDevolver {
+  background-color: #a3b6d5;
+}
+.table-rateio .rateioRetirar {
+  background-color: #87c180;
+}
+.table-rateio .varreduraRetirar {
+  background-color: #c8aec9;
+}
+.table-rateio .sub {
+  height: 17px;
+  font-size: 6px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.table-rateio .sub td {
+  border-collapse: collapse;
+  border: 0.5px solid black;
+  position: relative;
+}
+.table-rateio .sub .positive {
+  color: blue;
+}
+.table-rateio .sub .negative {
+  color: red;
+}
+.table-rateio .sub .conclusao {
+  top: 2px;
+  left: 2px;
+  z-index: -1;
+  position: absolute;
+  width: 60px;
+  height: 12px;
+  background: linear-gradient(90deg, #fc9903 0%, #fc9903 40%, #ffe3b9 100%);
+}
+.table-rateio .sub .noventa {
+  width: 54px;
+}
+.table-rateio .sub .oitenta {
+  width: 48px;
+}
+.table-rateio .sub .setenta {
+  width: 42px;
+}
+.table-rateio .sub .sessenta {
+  width: 36px;
+}
+.table-rateio .sub .cinquenta {
+  width: 30px;
+}
+.table-rateio .sub .quarenta {
+  width: 24px;
+}
+.table-rateio .sub .trinta {
+  width: 18px;
+}
+.table-rateio .sub .vinte {
+  width: 12px;
+}
+.table-rateio .sub .dez {
+  width: 6px;
+}
+
+.table-paralizacao {
+  border-spacing: 0;
+  width: 95%;
+  border-collapse: collapse;
+}
+.table-paralizacao .main th {
+  border-collapse: collapse;
+  border-bottom: 0.5px solid black;
+  font-size: 8px;
+  background-color: #fc9903;
+}
+.table-paralizacao .main th:first-child {
+  border-collapse: collapse;
+  border-left: 0.5px solid black;
+}
+.table-paralizacao .main th:last-child {
+  border-collapse: collapse;
+  border-right: 0.5px solid black;
+}
+.table-paralizacao .sub {
+  font-size: 8px;
+  text-align: center;
+}
+.table-paralizacao .sub td {
+  border: 0.5px solid black;
 }
