--- a/src/sass/files/paralizacao.scss
+++ b/src/sass/files/paralizacao.scss
@@ -6,7 +6,7 @@
         th {
             border-collapse: collapse;
             border-bottom: 0.5px solid $preto;
-        
+
             font-size: 8px;
             background-color: $laranja-main;
 
@@ -22,12 +22,44 @@
         }
     }
 
-    .sub{
+    .sub {
         font-size: 8px;
         text-align: center;
-        td{
-            border:  0.5px solid $preto;
+        td {
+            border: 0.5px solid $preto;
+            position: relative;
+            &:nth-child(6) {
+                background-color: $laranja-main;
+            }
         }
     }
- 
+
+    .programado {
+        background-color: rgb(126, 231, 140);
+        text-align: left;
+        border: 0 !important;
+    }
+
+    .naoProgramado {
+        background-color: rgb(229, 231, 126);
+        text-align: left;
+        border: 0 !important;
+    }
+
+    .expurgado {
+        background-color: rgb(126, 210, 231);
+        text-align: left;
+        border: 0 !important;
+    }
+
+    .vertical {
+        writing-mode: vertical-lr;
+        text-orientation: mixed;
+        position: absolute;
+        transform: rotate(180deg);
+        top: 0px;
+        right: 3px;
+        z-index: 100;
+        height: 75px;
+    }
 }
