--- a/src/sass/files/paralizacao.scss
+++ b/src/sass/files/paralizacao.scss
@@ -1,65 +1,94 @@
 .table-paralizacao {
-    border-spacing: 0;
-    width: 95%;
-    border-collapse: collapse;
-    .main {
-        th {
-            border-collapse: collapse;
-            border-bottom: 0.5px solid $preto;
+  border-spacing: 0;
+  width: 95%;
+  border-collapse: collapse;
+  .main {
+    th {
+      border-collapse: collapse;
+      border-bottom: 0.5px solid $preto;
 
-            font-size: 8px;
-            background-color: $laranja-main;
+      font-size: 8px;
+      background-color: $laranja-main;
 
-            &:first-child {
-                border-collapse: collapse;
-                border-left: 0.5px solid $preto;
-            }
+      &:first-child {
+        border-collapse: collapse;
+        border-left: 0.5px solid $preto;
+      }
 
-            &:last-child {
-                border-collapse: collapse;
-                border-right: 0.5px solid $preto;
-            }
-        }
+      &:last-child {
+        border-collapse: collapse;
+        border-right: 0.5px solid $preto;
+      }
+    }
+  }
+
+  .sub {
+    font-size: 8px;
+    font-weight: bold;
+    text-align: center;
+    td {
+      border: 0.5px solid $preto;
+      position: relative;
+      &:nth-child(6) {
+        background-color: $laranja-main;
+        font-weight: bold;
+      }
+      &:nth-child(9) {
+        background-color: $laranja-main;
+        font-weight: bold;
+      }
     }
 
-    .sub {
-        font-size: 8px;
-        text-align: center;
-        td {
-            border: 0.5px solid $preto;
-            position: relative;
-            &:nth-child(6) {
-                background-color: $laranja-main;
-            }
-        }
+    .finalizado {
+      background-color: yellow;
+      color: red;
+      font-weight: bold;
     }
+  }
 
-    .programado {
-        background-color: rgb(126, 231, 140);
-        text-align: left;
-        border: 0 !important;
-    }
+  .programado {
+    background-color: rgb(198, 255, 200);
+    text-align: left;
+    border: 0 !important;
+  }
 
-    .naoProgramado {
-        background-color: rgb(229, 231, 126);
-        text-align: left;
-        border: 0 !important;
-    }
+  .naoProgramado {
+    background-color: rgb(255, 255, 151);
+    text-align: left;
+    border: 0 !important;
+  }
 
-    .expurgado {
-        background-color: rgb(126, 210, 231);
-        text-align: left;
-        border: 0 !important;
-    }
-
-    .vertical {
-        writing-mode: vertical-lr;
-        text-orientation: mixed;
-        position: absolute;
-        transform: rotate(180deg);
-        top: 0px;
-        right: 3px;
-        z-index: 100;
-        height: 75px;
-    }
+  .expurgado {
+    background-color: rgb(198, 255, 255);
+    text-align: left;
+    border: 0 !important;
+  }
+  .verticalProgramado {
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    position: absolute;
+    transform: rotate(180deg);
+    z-index: 100;
+    height: 0px;
+    right: 4px;
+  }
+  .verticalNaoProgramado {
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    position: absolute;
+    transform: rotate(180deg);
+    z-index: 100;
+    top: 20px;
+    height: 90px;
+    right: 4px;
+  }
+  .verticalExpurgado {
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    position: absolute;
+    transform: rotate(180deg);
+    z-index: 100;
+    height: 20px;
+    right: 4px;
+  }
 }
